# LeBot

./: .gitignore  CMakeLists.txt  README.MD  xmake.lua
src/: AudioPlayer.cpp  AudioPlayer.h  Bot.cpp  Bot.h  CommandHandler.cpp  CommandHandler.h  Event.h  ThreadManager.cpp  ThreadManager.h  main.cpp
src/Audio/: Audio.cpp  Audio.h  AudioPlayer.cpp  AudioPlayer.h
src/Commands/: DeleteMessageCommand.cpp  DeleteMessageCommand.h  ICommand.cpp  ICommand.h  JoinCommand.cpp  JoinCommand.h  LeaveCommand.cpp  LeaveCommand.h  PingCommand.cpp  PingCommand.h  PlayCommand.cpp  PlayCommand.h  QueueCommand.cpp  QueueCommand.h  TestCommand.cpp  TestCommand.h  TrackCommand.cpp  TrackCommand.h
